# CornerstoneSDK

./: .gitignore  .gn  BUILD.gn  CMakeLists.txt  CornerstoneSDK.sln  CornerstoneSDK.vcxproj  CornerstoneSDK.vcxproj.filters  LICENSE  README.md  README.md.md  Readme.md  build.cmd  clean.cmd  cmake_build.ps1  docs.txt  func.js  todo.txt  说明.txt
.github/ISSUE_TEMPLATE/: bug.md  enhancement.md  wiki.md
config/: config.gn
config/toolchain/: BUILD.gn
def/: config.def
e2cpp/js/: tmp.txt
e2cpp/python/: e.txt  e2cpp.py
src/: config.h  handler.cc  plugin.cc
src.backup/: config.hpp  handler.cpp
src.backup/sdk/: app.cls.cpp  app.hpp  todo.txt
src.backup/xsdk/: main.cpp
src.backup/xsdk/xsdk/: xsdk.hpp
src/include/: encode.hpp  unpack.hpp
src/sdk/: app.cls.cc  app.hpp  app.util.cc  app.util.hpp  main.cpp  sdk.cc  sdk.h  todo.txt
src/sdk/api/: api.cc  api.h  api.inc
src/sdk/encoding/: encoding.cc  encoding.h
src/sdk/eport/: earray.h  etypes.h
src/sdk/framework/: constants.h  datatypes.h  permission.h
src/sdk/framework/datatype/: captcha_information.h  card_information.h  etext2string_mem.h  event_data.h  friend_information.h  group_card_information.h  group_file_information.h  group_information.h  group_member_information.h  group_message_data.h  order_detail.h  private_message_data.h  service_information.h  wallet_information.h
src/sdk/utils/: types.cc  types.h  utils-inl.h
src/xsdk/: readme.txt
src/xsdk/xsdk/: xsdk.hpp
