# Cornerstone SDK
# -- Corn SDK for Modern C++
#  
# Licensed under the MIT License
# SPDX-License-Identifier: MIT
# Copyright © 2020 Contributors of Cornerstone SDK
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

# 在此配置你的DLL名称
shared_library("cornerstone_demo_plugin.dll"){
    sources = [
        # "//src/**/*.cc",
        "//src/plugin.cc",
        "//src/sdk/sdk.cc",
        "//src/sdk/api/api.cc",
        "//src/sdk/utils/types.cc",
        "//src/config.h",
        "//src/sdk/sdk.h",
        "//src/sdk/api/api.h",
        "//src/sdk/utils/types.h",
        "//src/sdk/utils/utils-inl.h",
        "//src/sdk/third_party/json.h",
    ]

    ldflags= [
        "-static,--enable-stdcall-fixup,--gc-sections"
    ]

    # 
    cflags = [
        "-m32",
        "-O3",
        "-std=c++14",
        "-DUNICODE",
        "-D_UNICODE",
        "-DDEBUG",
    ]
    libs=[
        def_file # 在config/config.gn有写
    ]
}